# dimension

./: .gitignore  AUTHORS  HACKING  Makefile.am  README  THANKS  autogen.sh  configure.ac
bench/libdimension/: Makefile.am  array.c  bvst.c  geometry.c  kD_splay_tree.c  list.c  polynomial.c  prtree.c
dimension/: Makefile.am  __init__.py  bison.y  client.py.in  common.declarations  common.nonterminals  common.prologue  common.rules  common.terminals  dimension  dimension.in  directives.declarations  directives.nonterminals  directives.prologue  directives.rules  flex.l  grammar.declarations  grammar.epilogue  grammar.nonterminals  grammar.prologue  grammar.rules  grammar.terminals  grammar.y  lexer.l  main.c  parse.c  parse.h  platform.c  platform.h  preview.py  progressbar.c  progressbar.h  realize.c  realize.h  tokenize.c  tokenize.h  tokenize.l  utility.c  utility.h  y.tab.h
dimension/bench/: Makefile.am  bench.pov  parse.sh  render.sh  tokenize.sh
dimension/tests/: Makefile.am  arithexp.pov  complex.dmnsn  csg.sh  cube.dmnsn  demo.dmnsn  demo.sh  directives.inc  directives.sh  ellipsoid.dmnsn  invalid-macro.pov  labels.pov  punctuation.pov  strings.pov  strings.sh  transformations.pov  transformations.sh
libdimension/: Doxyfile.in  Makefile.am  X.c  ambient.c  array.c  bvh.c  bvh.h  bvst.c  bvst.h  camera.c  cameras.c  canvas.c  canvas_pigment.c  checker.c  color.c  color_map.c  compiler-internal.h  compiler.h  cone.c  csg.c  cube.c  cylinder.c  dictionary.c  diffuse.c  dimension-impl.h  dimension-internal.h  dimension.h  dimension_impl.h  error.c  finish.c  finish_combination.c  finishes.c  future-impl.h  future-internal.h  future.c  geometry.c  gl-stubs.c  gl.c  gradient.c  inline.c  (+56 more)
libdimension-png/: Makefile.am  dimension-png.h  png.c
libdimension-python/: Camera.c  Camera.h  Canvas.c  Canvas.h  Color.c  Color.h  Makefile.am  Matrix.c  Matrix.h  Object.c  Object.h  PerspectiveCamera.c  PerspectiveCamera.h  Scene.c  Scene.h  Sphere.c  Sphere.h  Vector.c  Vector.h  dimension-python.h  dimension.c  dimension.h  dimension.pxd  dimension.pyx  platform.c  platform.h  scene.c  wrapper.pxd  wrapper.pyx
libdimension-python/tests/: Makefile.am  canvas.py  color.py  demo.py  geometry.py
libdimension/base/: array.c  dictionary.c  error.c  inline.c  malloc.c  pool.c  profile.c
libdimension/bench/: Makefile.am  array.c  future.c  geometry.c  polynomial.c  prtree.c  triangle.c
libdimension/bvh/: bvh.c  prtree.c
libdimension/canvas/: canvas.c  gl-stubs.c  gl.c  png-stubs.c  png.c  rgba.c
libdimension/concurrency/: future.c  threads.c
libdimension/dimension/: X.h  array.h  base.h  camera.h  cameras.h  canvas.h  color.h  common.h  compiler.h  concurrency.h  csg.h  cube.h  dictionary.h  error.h  finish.h  finishes.h  future.h  geometry.h  gl.h  inline.h  interior.h  light.h  lights.h  list.h  malloc.h  map.h  math.h  model.h  object.h  objects.h  pattern.h  patterns.h  pigment.h  pigments.h  platform.h  png.h  polynomial.h  pool.h  progress.h  raytrace.h  (+8 more)
libdimension/dimension/base/: array.h  common.h  compiler.h  dictionary.h  error.h  malloc.h  pool.h
libdimension/dimension/canvas/: canvas.h  gl.h  png.h
libdimension/dimension/color/: color.h  tcolor.h
libdimension/dimension/concurrency/: future.h
libdimension/dimension/math/: aabb.h  matrix.h  ray.h  scalar.h  vector.h
libdimension/dimension/model/: camera.h  csg.h  lights.h  object.h  pigments.h  texture.h
libdimension/dimension/platform/: timer.h
libdimension/dimension/render/: render.h
libdimension/internal/: all.h  bvh.h  compiler.h  concurrency.h  future.h  platform.h  polynomial.h  profile.h  prtree.h  rgba.h
libdimension/math/: matrix.c  polynomial.c
libdimension/model/: camera.c  finish.c  interior.c  light.c  object.c  pigment.c  scene.c  texture.c
libdimension/model/cameras/: perspective.c
libdimension/model/finishes/: lambertian.c  phong.c  reflection.c
libdimension/model/lights/: point_light.c
libdimension/model/objects/: cone.c  csg.c  cube.c  plane.c  sphere.c  torus.c  triangle.c  triangle_fan.c
libdimension/model/pigments/: canvas_pigment.c  pigment_map.c  solid_pigment.c
libdimension/pattern/: checker.c  gradient.c  leopard.c  map.c  pattern.c
libdimension/platform/: platform.c  timer.c
libdimension/render/: render.c
libdimension/tests/: Makefile.am  c++03.cpp  c89.c  c99.c  custom-error-fn.c  cxx.cpp  dictionary.c  display-stubs.c  display.c  error.c  future.c  gl.c  png.c  polynomial.c  pool.c  prtree.c  refcount.c  render.c  test_canvas.c  tests.h  unit-test.c  warning-as-error.c  warning.c
libdimension/tests/base/: dictionary.c  pool.c
libdimension/tests/bvh/: prtree.c
libdimensionxx/: Makefile.am  camera.cpp  cameras.cpp  canvas.cpp  color.cpp  cookie-fopencookie.cpp  cookie-tmpfile.cpp  cookie.cpp  dimensionxx.hpp  error.cpp  geometry.cpp  gl.cpp  object.cpp  objects.cpp  png.cpp  progress.cpp  raytrace.cpp  scene.cpp  texture.cpp
libdimensionxx/dimensionxx/: array.hpp  camera.hpp  cameras.hpp  canvas.hpp  color.hpp  cookie.hpp  cube.hpp  error.hpp  geometry.hpp  gl.hpp  object.hpp  objects.hpp  png.hpp  progress.hpp  raytrace.hpp  scene.hpp  texture.hpp  utility.hpp
tests/: Makefile.am  X.c  error.c  error.cpp  gl.c  gl.cpp  glxx.cpp  png.c  png.cpp  pngxx  pngxx.cpp  raytrace.c  raytracexx.cpp  tests.c  tests.cpp  tests.h  tests.hpp  testsxx.cpp  testsxx.hpp  warning.c  warning.cpp
tests/dimension/: Makefile.am  arithexp.pov  arithexp.sh  box.pov  box.sh  braces.pov  csg.pov  csg.sh  demo.pov  demo.sh  directives.inc  directives.pov  directives.sh  integer-overflow.pov  integer-overflow.sh  invalid-macro.pov  invalid-macro.sh  labels.pov  labels.sh  numeric.pov  numeric.sh  punctuation.pov  punctuation.sh  strings.pov  strings.sh  tbuffer-overlap.pov  tbuffer-overlap.sh  tokenizer.sh  transformations.pov  transformations.sh
tests/libdimension/: Makefile.am  bvst.c  cxx.cpp  display-stubs.c  display.c  error.c  gl.c  kD_splay_tree.c  list.c  png.c  polynomial.c  prtree.c  render.c  tests.c  tests.h  warning-as-error.c  warning.c
(+21 files in other folders)
